feat: Implementasi connect database & JWT
