# main.go
@@ -16,45 +16,67 @@ package main
 // @BasePath /
 
 import (
+	"database/sql"
+	"log"
 	"net/http"
 	"strconv"
 
+	"go-echo-101/auth"
 	_ "go-echo-101/docs"
 
 	"github.com/labstack/echo/v4"
+	_ "github.com/lib/pq" // postgreSQL driver
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
 // object atau class User
 type User struct {
-	ID      int    `json:"id"`
-	Name    string `json:"name"`
-	Age     int    `json:"age"`
-	Address string `json:"address"`
+	ID    int    `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+	// Age     int    `json:"age"`
+	// Address string `json:"address"`
 }
 
 type ErrorResponse struct {
 	Message string `json:"message"`
 }
 
-var users = []User{
-	{ID: 1, Name: "John Doe", Age: 30, Address: "123 Main St"},
-	{ID: 2, Name: "Jane Smith", Age: 25, Address: "456 Elm St"},
-	{ID: 3, Name: "Alice Johnson", Age: 28, Address: "789 Oak St"},
-	{ID: 4, Name: "Bob Brown", Age: 35, Address: "101 Pine St"},
-}
+var usermeeting2 = []User{}
+var db *sql.DB
 
 func main() {
+	//mengkoneksi ke dalam database
+	db = connectToDatabase()
+
 	e := echo.New()
 
+	e.GET("/generate-token", auth.GenerateTokenJWT) // login generate-token
+	e.GET("/validate-token", auth.ValidateTokenJWT)
+	e.GET("/refresh-token", auth.ValidateRefreshToken)
+
+	group := e.Group("/api/v1")
+	group.Use(auth.AuthMiddleware)
+
+	// Swagger documentation
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
-	e.GET("/users", getUsers)
-	e.GET("/users/:id", getUserByID)
-	e.POST("/users", createUser)
-	e.PUT("/users/:id", updateUser)
-	e.DELETE("/users/:id", deleteUser)
+	group.GET("/swagger/*", echoSwagger.WrapHandler)
+	group.GET("/users", getUsers)
+	group.GET("/users/:id", getUserByID)
+	group.POST("/users", createUser)
+	group.PUT("/users/:id", updateUser)
+	group.DELETE("/users/:id", deleteUser)
 
 	e.Start(":8080")
+}
+
+func connectToDatabase() *sql.DB {
+	connStr := "postgres://postgres:admin@localhost:5432/postgres?sslmode=disable"
+	db, err := sql.Open("postgres", connStr)
+	if err != nil {
+		log.Fatal(err)
+	}
+	return db
 }
 
 // @Summary Endpoint create a new user
@@ -73,11 +95,24 @@ func createUser(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid request payload"})
 	}
 
-	if newUser.Name == "" {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Name is required"})
+	tx, err := db.Begin() // memulai transaksi
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
 
-	users = append(users, newUser)
+	// insert data ke dalam tabel usermeeting
+	var lastInsertID int
+	err = tx.QueryRow("INSERT INTO usermeeting2 (name, email) VALUES ($1, $2) RETURNING id", newUser.Name, newUser.Email).Scan(&lastInsertID)
+	err = tx.QueryRow("SELECT id, name, email FROM usermeeting2 WHERE id = $1", lastInsertID).Scan(&newUser.ID, &newUser.Name, &newUser.Email)
+
+	// Jika terjadi error saat insert, rollback transaksi
+	if err != nil {
+		tx.Rollback()
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+
+	tx.Commit()
+
 	return c.JSON(http.StatusCreated, newUser)
 }
 
@@ -98,12 +133,19 @@ func getUserByID(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
 	}
 
-	for _, user := range users {
-		if user.ID == IDInt {
-			return c.JSON(http.StatusOK, user)
+	// mengquery untuk mengambil data berdasarkan ID
+	data := db.QueryRow("SELECT id, name, email FROM usermeeting2 WHERE id = $1", IDInt)
+
+	var user User
+	err = data.Scan(&user.ID, &user.Name, &user.Email) // mengscan data ke dalam struct User
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
 		}
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
-	return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+
+	return c.JSON(http.StatusOK, user)
 }
 
 // @Summary Get all users
@@ -115,10 +157,24 @@ func getUserByID(c echo.Context) error {
 // @Failure 404 {object} ErrorResponse
 // @Router /users [get]
 func getUsers(c echo.Context) error {
-	if len(users) == 0 {
-		return c.JSON(http.StatusNotFound, ErrorResponse{Message: "No users found"})
+	rows, err := db.Query("SELECT id, name, email FROM usermeeting2")
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error retrieving users"})
 	}
-	return c.JSON(http.StatusOK, users)
+
+	var usersFromDB []User
+	for rows.Next() { // mengiterasi baris hasil query
+		var user User
+		if err := rows.Scan(&user.ID, &user.Name, &user.Email); err != nil {
+			return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error scanning user data"})
+		}
+		usersFromDB = append(usersFromDB, user)
+	}
+	if err := rows.Err(); err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: "Error processing user data"})
+	}
+
+	return c.JSON(http.StatusOK, usersFromDB)
 }
 
 // @Summary Update user by ID
@@ -133,25 +189,37 @@ func getUsers(c echo.Context) error {
 // @Failure 404 {object} ErrorResponse
 // @Router /users/{id} [put]
 func updateUser(c echo.Context) error {
-	id := c.Param("id") // mengambil parameter yang akan diupdate yaitu "id"
+	var updatedUser User
+	if err := c.Bind(&updatedUser); err != nil {
+		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid request payload"})
+	}
+	id := c.Param("id")
 	IDInt, err := strconv.Atoi(id)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
 	}
 
-	var updatedUser User       // membuat variabel untuk update data user
-	err = c.Bind(&updatedUser) // bind adalah untuk request ke variabel updatedUser
+	tx, err := db.Begin()
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid request payload"})
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+	// mengupdate data user berdasarkan ID
+	result, err := tx.Exec("UPDATE usermeeting2 SET name = $1, email = $2 WHERE id = $3", updatedUser.Name, updatedUser.Email, IDInt)
+	// mengambil data yang baru saja diupdate
+	err = tx.QueryRow("SELECT id, name, email FROM usermeeting2 WHERE id = $1", IDInt).Scan(&updatedUser.ID, &updatedUser.Name, &updatedUser.Email)
+
+	// mengecek data
+	if rowsAffected, _ := result.RowsAffected(); rowsAffected == 0 {
+		return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
 	}
 
-	for i, user := range users {
-		if user.ID == IDInt {
-			users[i] = updatedUser // untuk mengupdate data user
-			return c.JSON(http.StatusOK, updatedUser)
-		}
+	// Jika terjadi error saat mengambil data, rollback transaksi
+	if err != nil {
+		tx.Rollback()
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
-	return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+	tx.Commit() // mengcommit transaksi
+	return c.JSON(http.StatusOK, updatedUser)
 }
 
 // @Summary Delete user by ID
@@ -165,18 +233,30 @@ func updateUser(c echo.Context) error {
 // @Failure 404 {object} ErrorResponse
 // @Router /users/{id} [delete]
 func deleteUser(c echo.Context) error {
-	id := c.Param("id")            // mengambil parameter yang akan didelete yaitu "id"
-	IDInt, err := strconv.Atoi(id) // konversi string ke integer
+	id := c.Param("id")
+	IDInt, err := strconv.Atoi(id)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, ErrorResponse{Message: "Invalid user ID"})
 	}
 
-	// mencari user dengan ID yang sesuai
-	for i, user := range users {
-		if user.ID == IDInt {
-			users = append(users[:i], users[i+1:]...) // menghapus user dari slice
-			return c.NoContent(http.StatusNoContent)
-		}
+	tx, err := db.Begin()
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
 	}
-	return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+
+	// menghapus data user berdasarkan ID
+	result, err := tx.Exec("DELETE FROM usermeeting2 WHERE id = $1", IDInt)
+	// Cek apakah ada baris yang terpengaruh
+	if rowsAffected, _ := result.RowsAffected(); rowsAffected == 0 {
+		return c.JSON(http.StatusNotFound, ErrorResponse{Message: "User not found"})
+	}
+
+	// Jika error saat delete, rollback transaksi
+	if err != nil {
+		tx.Rollback()
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{Message: err.Error()})
+	}
+	tx.Commit()
+
+	return c.NoContent(http.StatusNoContent)
 }
